# CAIRN

./: .dockerignore  .env.sample  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  app.py  config.py  config.toml.sample  config.yaml  config.yaml.sample  docker-compose.traefik.yml  docker-compose.yml  exporter.py  preprocessor.py  pyproject.toml
.github/: deploy.yaml
.github/workflows/: ci.yml  docker-publish.yml
App_web/: app.py  exporter.py  preprocessor.py
App_web/models/: __init.__.py  yolo.py
App_web/ofb_attendance/: DataManagment.py  Directions.py  config.json  extractMetadata.py  functions.py  yolov8_attendance.py
analysis/: requirements.txt
analysis/notebooks/: test.ipynb
docs/: guide_admin.md  guide_utilisateur.md
model_weights/: YOLO26_300epochs_tentes+baigneurs_10freeze.pt
models/: __init.__.py  base.py  sam3.py  yolo.py
ofb_attendance/: BlurImageFromPrediction.py  DirectionPrediction.py  Prediction.py  classes.json  classes_exeptions_rules.json  functions.py  yolov8_attendance.py
scripts/SAM3/: SAM3_with_tilling.py  try_SAM3.py
scripts/SAM3/evaluation_pipeline/: README.md  SAM3_tilling.py  adapterJSON_to_bettik.py  data.py  (+5 more)
scripts/annotations/: README.md  analyse.py  tentes_par_jour.py
scripts/data_base/: README.md  data_base.py  méta_données_Muzelle.py
scripts/entrainement_YOLO/: README.md  all_tentes_baigneurs.yaml  generate_tiles.py  make_split_tiled.py  preparation_dataset.py  prepare_labels_tente_baigneurs.py  training_yolo.py
scripts/traitement_timelapses_browning/: README.md  TLS_to_JPG.py
