[project]
name = "CrowdShore"
version = "0.0.1"
license = {text = "MIT"}

dependencies = [
   "gradio>=4.0.0",
    "opencv-python-headless>=4.8.0",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
    "ultralytics>=8.0.0",
    "sahi>=0.11.14"
]
requires-python = ">= 3.10"
authors = [
    { name = "Lucien Weksteen", email = "lucien.weksteen@ecrins-parcnational.fr" }
]
readme = { file = "README.md"}
keywords = ["image recognition", "object detection"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
