[project]
name = "CAIRN"
version = "0.0.1"
license = { text = "MIT" }
dependencies = [
    "gradio>=4.0.0",
    "opencv-python-headless>=4.8.0",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
    "ultralytics>=8.0.0",
    "sahi>=0.11.14",
    "marshmallow>=4.3.0",
    "pyyaml>=6.0.3",
    "validators>=0.35.0",
    "pyexiftool>=0.5.6",
]
requires-python = ">= 3.10"
authors = [
    { name = "Lucien Weksteen", email = "lucien.weksteen@ecrins-parcnational.fr" }
]
readme = { file = "README.md" }
keywords = ["image recognition", "object detection"]

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[tool.black]
line-length = 99
